tests/ui/diagnostic-width/whitespace-trimming.stderr
error[E0308]: mismatched types
  --> $DIR/whitespace-trimming.rs:4:193
   |
LL | ...                   let _: () = 42;
   |                              --   ^^ expected `()`, found integer
   |                              |
   |                              expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
