tests/ui/diagnostic-width/whitespace-trimming.rs
// ignore-tidy-linelength

fn main() {
                                                                                                                                                                                    let _: () = 42;
//~^ ERROR mismatched types
}
